# sbcli

./: .gitignore  .pypirc  @  AGENTS.md  README.md  build_image.sh  cli-reference-schema.yaml  cli-reference.yaml  docker-compose-dev.yml  env_var  first_analysis.md  main.py  openapi-spec.yaml  postman_collection.json  pyproject.toml  requirements.txt  setup.py  single_node_expansion_plan.md  step6_design.md  test-requirements.txt  tox.ini
.claude/: settings.json
.github/: pull_request_template.md
docker/: Dockerfile  Dockerfile.helm-deployer  Dockerfile_base  Dockerfile_cluster
docs/: README.md  create_crypto_lvol.md  database.md  generate_doc.py  k8s_mgmt.md  talos.md
e2e/: README.md  TEST_PLAN.md  __init__.py  continuous_log_collector.py  e2e.py  load.py  logger_config.py  requirements.txt  run_tests.sh  sbcli_utils.py  single_node_outage.py  ssh_utils.py  stress.py  test_single_node_outage.py  upgrade_e2e.py  utils.py
live-migration/: Dockerfile  README.md  migrate.yaml  postgres-pvc.yaml  postgres-svc.yaml  postgres-vm.yaml  postgres-vm2.yaml  vm.yaml  vm2.yaml  vm3.yaml
management/: cli.py  cluster_ops.py  cnode_client.py  compute_node_ops.py  constants.py  distr_controller.py  kv_store.py  mgmt_node_ops.py  rpc_client.py  shell_utils.py  snode_client.py  storage_node_ops.py  utils.py
manual_testing/: check_endpoints.py
sbcli_mig.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: aws_dual_node_outage_soak_failure_domain.py  aws_dual_node_outage_soak_mixed.py  aws_dual_node_outage_soak_mixed_churn.py  aws_dual_node_outage_soak_ordered.py  diag_jm_fd.py  (+22 more)
(+985 files in other folders)
